<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_padding"
        android:layout_marginTop="@dimen/large_padding"
        android:layout_marginEnd="@dimen/large_padding"
        android:layout_marginBottom="@dimen/large_padding"
        tools:context=".presentation.market.MarketFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg"
            android:paddingTop="@dimen/medium_padding"
            android:paddingBottom="@dimen/medium_padding"
            app:layout_constraintBottom_toTopOf="@+id/market_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/left_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_equity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/equity"
                    android:textColor="@color/account_text_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/txt_balance"
                    app:layout_constraintEnd_toStartOf="@id/txt_equity_value"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_equity_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dash"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_equity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="2"
                    app:layout_constraintStart_toEndOf="@+id/txt_equity"
                    app:layout_constraintTop_toTopOf="@+id/txt_equity" />

                <TextView
                    android:id="@+id/txt_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textColor="@color/account_text_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txt_balance_value"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_equity" />

                <TextView
                    android:id="@+id/txt_balance_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dash"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_balance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="2"
                    app:layout_constraintStart_toEndOf="@+id/txt_balance"
                    app:layout_constraintTop_toTopOf="@+id/txt_balance" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:id="@+id/view"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="@color/account_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/right_account"
                app:layout_constraintStart_toEndOf="@+id/left_account"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/right_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_margin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/margin"
                    android:textColor="@color/account_text_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/txt_used"
                    app:layout_constraintEnd_toStartOf="@+id/txt_margin_value"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_margin_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dash"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="2"
                    app:layout_constraintStart_toEndOf="@+id/txt_margin"
                    app:layout_constraintTop_toTopOf="@+id/txt_margin" />

                <TextView
                    android:id="@+id/txt_used"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/used"
                    android:textColor="@color/account_text_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txt_used_value"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_margin" />

                <TextView
                    android:id="@+id/txt_used_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dash"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_used"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="2"
                    app:layout_constraintStart_toEndOf="@+id/txt_used"
                    app:layout_constraintTop_toTopOf="@+id/txt_used" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/market_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_padding"
            android:layout_marginBottom="@dimen/large_padding"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/symbol"
                android:textColor="@color/title_text_color"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/change"
                android:textColor="@color/title_text_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sell"
                android:textColor="@color/title_text_color" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/buy"
                android:textColor="@color/title_text_color" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
